--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0-beta.7",
-    "@angular/common":"^5.0.0-beta.7",
+    "@angular/common": "^5.0.0-beta.7",
     "@angular/compiler": "^5.0.0-beta.7",
     "@angular/core": "^5.0.0-beta.7",
     "@angular/forms": "^5.0.0-beta.7",
@@ -22,11 +22,12 @@
     "@angular/platform-browser-dynamic": "^5.0.0-beta.7",
     "@angular/router": "^5.0.0-beta.7",
     "core-js": "^2.4.1",
+    "ng-format-pipe": "0.0.7",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
+    "@angular/cli": "1.4.3",
     "@angular/compiler-cli": "^5.0.0-beta.7",
     "@angular/language-service": "^5.0.0-beta.7",
     "@types/jasmine": "~2.5.53",
@@ -44,6 +45,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.4.2"
   }
 }
