--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0-beta.7",
+    "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^5.0.0-beta.7",
     "@angular/compiler": "^5.0.0-beta.7",
     "@angular/core": "^5.0.0-beta.7",
     "@angular/forms": "^5.0.0-beta.7",
     "@angular/http": "^5.0.0-beta.7",
+    "@angular/material": "^2.0.0-beta.11",
     "@angular/platform-browser": "^5.0.0-beta.7",
     "@angular/platform-browser-dynamic": "^5.0.0-beta.7",
     "@angular/router": "^5.0.0-beta.7",
