Updated CI to build with modified baseHref

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 - npm install -g @angular/cli
 - npm i istanbul jasmine coveralls -D
 script:
-- ng build --prod
+- ng build --prod --base-href /PortfolioSite/
 # - ng test --watch=false --code-coverage
 # - npm run coveralls
 
